--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,9 @@
     {% for article in article_list %}
     <div class="blogs">
         <ul>
-            <h3><a href="{% url 'category:category' %}?id={{ article.id }}"> </a></h3>
-            <p>  </p>
-            <p class="autor"><span class="lm f_l">{% for tag in article.tag.all %}<a href="/">{{ tag.name }}</a>&nbsp;</span>{% endfor %}<span class="dtime f_l">{{ article.date_publish | date:'Y-m-d' }}</span><span class="viewnum f_r">浏览（<a href="/">{{ article.click_count }}</a>）</span><span class="pingl f_r">评论（<a href="/">{{ article.comment_set.all.count }}</a>）</span></p>
+            <h3><a href="{% url 'blogapp:article' %}?id={{ article.id }}">{{ article.name }}</a></h3>
+            <p>{{ article.content }}</p>
+            <p class="autor"><span class="lm f_l">{% for tag in article.tag.all %}<a href="/">{{ tag.name }}</a>&nbsp;</span>{% endfor %}<span class="dtime f_l">{{ article.date_publish | date:'Y-m-d' }}</span><span class="viewnum f_r"><a href="/">浏览（{{ article.click_count }}）</a></span><span class="pingl f_r"><a href="/">评论（{{ article.comment_set.all.count }}）</a></span></p>
         </ul>
     </div>
     {% endfor %}
