--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
     <ul>
         <a href="/">首页</a>
         {% for category in category_list %}
-        <a href="{% url 'blogapp:category' %}?cid={{ category.id }}">{{ category.name }}</a>
+        <a href="{% url 'blog:article' %}?cid={{ category.id }}">{{ category.name }}</a>
         {% endfor %}
     </ul>
     <script src="{% static 'js/nav.js' %}"></script>
@@ -43,7 +43,7 @@
                 <ul>
                     <li><a class="xlwb" href="#" target="_blank">新浪微博</a></li>
                     <li><a class="txwb" href="#" target="_blank">腾讯微博</a></li>
-                    <li><a class="rss" href="" target="_blank">RSS</a></li>
+                    <li><a class="rss" href="#" target="_blank">RSS</a></li>
                     <li><a class="wx" href="mailto:admin@admin.com">邮箱</a></li>
                 </ul>
             </div>
