--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,14 @@
 {% block left_content %}
 {% include 'ad.html' %}
 <div class="topnews">
-    <h2>最新文章</h2>
+    <h2>{% if aid %}{{ cname }}{% else %}最新文章
+        {% endif %}
+    </h2>
     {% for article in article_list %}
     <div class="blogs">
         <ul>
-            <h3><a href="{% url 'blogapp:article' %}?id={{ article.id }}">{{ article.name }}</a></h3>
-            <p>{{ article.content }}</p>
+            <h3><a href="{% url 'blog:articleinfo' %}?id={{ article.id }}">{{ article.name }}</a></h3>
+            <p>{{ article.describe }}</p>
             <p class="autor"><span class="lm f_l">{% for tag in article.tag.all %}<a href="/">{{ tag.name }}</a>&nbsp;</span>{% endfor %}<span class="dtime f_l">{{ article.date_publish | date:'Y-m-d' }}</span><span class="viewnum f_r"><a href="/">浏览（{{ article.click_count }}）</a></span><span class="pingl f_r"><a href="/">评论（{{ article.comment_set.all.count }}）</a></span></p>
         </ul>
     </div>
