第一天需求完成，点击文章名进入详情页

--- a/templates/article.html
+++ b/templates/article.html
@@ -4,7 +4,7 @@
 {% block left_content %}
     {% for article in article_list %}
         <div class="postdate">
-        {#    <div class="month">{{ article.date_publish  | month_to_upper}}</div>#}
+            <div class="month">{{ article.date_publish  | date:'m'}}</div>
             <div class="date">{{ article.date_publish | date:'d' }}</div>
         </div>
         <div class="title">
