--- a/templates/base.html
+++ b/templates/base.html
@@ -146,7 +146,7 @@
   <!--r_box end -->
 </article>
 <footer>
-    <p class="ft-copyright">聪明的骆驼的个人博客</p>
+    <p class="ft-copyright">任昌伟的个人博客</p>
     <div id="tbox"> <a id="togbook" href="/"></a> <a id="gotop" href="javascript:void(0)"></a> </div>
 </footer>
 </body>
