评论、注册登录、标签over

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
         <ul>
             <h3><a href="{% url 'blog:articleinfo' %}?id={{ article.id }}">{{ article.name }}</a></h3>
             <p>{{ article.describe }}</p>
-            <p class="autor"><span class="lm f_l">{% for tag in article.tag.all %}<a href="/">{{ tag.name }}</a>&nbsp;</span>{% endfor %}<span class="dtime f_l">{{ article.date_publish | date:'Y-m-d' }}</span><span class="viewnum f_r"><a href="/">浏览（{{ article.click_count }}）</a></span><span class="pingl f_r"><a href="/">评论（{{ article.comment_set.all.count }}）</a></span></p>
+            <p class="autor"><span class="lm f_l"><a href="/">{{ article.tag.name }}</a>&nbsp;</span><span class="dtime f_l">{{ article.date_publish | date:'Y-m-d' }}</span><span class="viewnum f_r"><a href="/">浏览（{{ article.click_count }}）</a></span><span class="pingl f_r"><a href="/">评论（{{ article.comment_set.all.count }}）</a></span></p>
         </ul>
     </div>
     {% endfor %}
