--- a/templates/article.html
+++ b/templates/article.html
@@ -26,26 +26,31 @@
         Address:  <a href="{{ SITE_URL }}article/?id={{ article.id }}" rel="bookmark" title="{{ article.name }}">{{ SITE_URL }}article/?id={{ article.id }}</a>
     </div>
 
-<div class="commentstitle"><h3 id="comments"><span class="commentsnumber">only 1 comment</span> untill now</h3></div>
+<div class="commentstitle"><h3 id="comments"><span class="commentsnumber">only {{ article.comment_set.all.count }} comment</span> untill now</h3></div>
 <ol class="commentlist">
-    {% for comment in comment_list %}
-        <li id="comment-59418">
-            <div class="top"><a href='{{ comment.url }}' rel='external nofollow' class='url'>{{ comment.user_info.username }}</a><span class="time"> @ <a href="#comment-59418" title="">{{ comment.date_publish | date:'Y-m-d H:i:s' }}</a></span></div>
-            <div><img alt='' src='{% static 'images/default.jpg' %}' class='avatar avatar-32 photo' height='32' width='32' /></div>
-            <div class="body"><p>{{ comment.content }}</p></div>
-        </li>
-        {% for children_comment in comment.children_comment %}
-            <li id="comment-59542">
-                <div class="reply">
-                    <div class="top"><a href="{{ children_comment.url }}" rel="external nofollow" class="url">{{ children_comment.username }}</a><span class="time"> @ <a href="#comment-59543" title="">{{ children_comment.date_publish | date:'Y-m-d H:i:s' }}</a></span></div>
-                    <div><img alt="" src="{% static 'images/default.jpg' %}" class="avatar avatar-32 photo" height="32" width="32"></div>
-                    <div class="body">
-                        {{ children_comment.content }}
-                    </div>
-                </div>
+	<!--判断后台的数据，显示主评论和提示信息-->
+        {% for comment in comment_list %}
+            <li id="comment-59418">
+                <div class="top"><a href='{{ comment.user_info.url }}' rel='external nofollow' class='url'>{{ comment.user_info.username }}</a><span class="time"> @ <a href="#comment-59418" title="">{{ comment.date_publish | date:'Y-m-d H:i:s' }}</a></span></div>
+                <div><img alt='' src='{% static 'images/default.jpg' %}' class='avatar avatar-32 photo' height='32' width='32' /></div>
+                <div class="body"><p>{{ comment.content }}</p></div>
             </li>
+			<!--子评论-->
+            {% for children_comment in comment.children_comment %}
+                <li id="comment-59542">
+                    <div class="reply">
+                        <div class="top"><a href="{{ children_comment.url }}" rel="external nofollow" class="url">{{ children_comment.username }}</a><span class="time"> @ <a href="#comment-59543" title="">{{ children_comment.date_publish | date:'Y-m-d H:i:s' }}</a></span></div>
+                        <div><img alt="" src="{% static 'images/default.jpg' %}" class="avatar avatar-32 photo" height="32" width="32"></div>
+                        <div class="body">
+                            {{ children_comment.content }}
+                        </div>
+                    </div>
+                </li>
+            {% endfor %}
+            <!--子评论完-->
         {% endfor %}
-    {% endfor %}
+        <!--主评论完-->
+        
 </ol>
 
 <div id="commentform">
@@ -56,11 +61,8 @@
         <div class='login_info'><b>{{ request.user.username }}</b>,快来写点评论吧!&nbsp;<a href="{% url 'blog:logout' %}">注销</a></div>
     {% endif %}
     <form action="{% url 'blog:receive' %}" method="post">
-{#        <p><label for="author">Name：{{ request.user.username }}</label></p>#}
-{#        <p><label for="email">Email：{{ request.user.useremail }}</label></p>#}
-{#        <p><label for="url">URL：{{ request.user.userurl }}</label></p>#}
         <textarea placeholder="请写下你的想法..." style="width:592px;height:90px;" id="content" name="content"></textarea>
-        <input type="text" name="aname" hidden value="{{ article.name }}" />
+        <input type="text" name="aname" hidden value="{{ article.id }}" />
         <input type="text" name="rname" hidden value="{{ request.user.username }}">
         <p>
             <input name="submit" type="submit" id="submit" tabindex="5" value="提交评论" class="button" />
