--- a/templates/base.html
+++ b/templates/base.html
@@ -19,8 +19,8 @@
 <body>
 <header>
     <div class="logo">
-        <h1> </h1>
-        <p> </p>
+        <h1>任昌伟的博客园</h1>
+        <p>好好沉淀，厚积薄发</p>
     </div>
     <nav id="topnav" class="f_r">
     <ul>
@@ -105,7 +105,9 @@
         <div class="cloud">
             <h3>标签云</h3>
             <ul>
-                <li><a href="/">个人博客</a></li>
+            	{% for label in label_list %}
+                <li><a href="{% url 'blog:label' %}?lid={{ label.id }}">{{ label.name }}</a></li>
+                {% endfor %}
                 <li><a href="/">web开发</a></li>
                 <li><a href="/">前端设计</a></li>
                 <li><a href="/">Html</a></li>
@@ -119,6 +121,7 @@
                 <li><a href="/">CSS3</a></li>
                 <li><a href="/">Html5+css3</a></li>
                 <li><a href="/">百度</a></li>
+                
             </ul>
         </div>
         <div class="tuwen">
