--- a/templates/article.html
+++ b/templates/article.html
@@ -3,63 +3,62 @@
 {% load myfilter %}
 {% block left_content %}
     <div class="postdate">
-        <div class="month">{{ article.date_publish  | month_upper }}</div>
-        <div class="date">{{ article.date_publish | date:'d' }}</div>
+      <div class="month">{{ article.date_publish | month_upper }}</div>
+      <div class="date">{{ article.date_publish | date:'d' }}</div>
     </div>
     <div class="title">
-        <h2><a href="" rel="bookmark" title="{{ article.name }}">{{ article.name }}</a></h2>
+        <h2><a href="" rel="bookmark" title="{{ article.title }}">{{ article.name }}</a></h2>
         <div class="postmeta">
-            <span class="postmeta_author">{{ article.author }}</span>
-            <span class="postmeta_category"><a href="" rel="category">{{ article.tag.name }}</a></span>
-            <span class="postmeta_time">{{ article.date_publish | date:'Y-m-d' }}</span>
+          <span class="postmeta_author">{{ article.author.username }}</span>
+          <span class="postmeta_category"><a href="" rel="category">{{ article.tag.name }}</a></span>
+          <span class="postmeta_time">{{ article.date_publish | date:'Y-m-d' }}</span>
         </div>
     </div>
-    <div class="entry">
-        {{ article.content | safe }}
-    </div>
-    <span class="tags">
-        {% for tag in article.tag.all %}
+        <div class="entry">
+          {{ article.content | safe }}
+        </div>
+        <span class="tags">
+            {% for tag in article.tag.all %}
             <a href="?tag={{ tag.name }}" rel="tag">{{ tag.name }}</a>
-        {% endfor %}
-    </span>
-    <div class="info">
-        Address:  <a href="{{ SITE_URL }}article/?id={{ article.id }}" rel="bookmark" title="{{ article.name }}">{{ SITE_URL }}article/?id={{ article.id }}</a>
-    </div>
-
-<div class="commentstitle"><h3 id="comments"><span class="commentsnumber">only {{ article.comment_set.all.count }} comment</span> untill now</h3></div>
-<ol class="commentlist">
-	<!--判断后台的数据，显示主评论和提示信息-->
-        {% for comment in comment_list %}
-            <li id="comment-59418">
-                <div class="top"><a href='{{ comment.user_info.url }}' rel='external nofollow' class='url'>{{ comment.user_info.username }}</a><span class="time"> @ <a href="#comment-59418" title="">{{ comment.date_publish | date:'Y-m-d H:i:s' }}</a></span></div>
-                <div><img alt='' src='{% static 'images/default.jpg' %}' class='avatar avatar-32 photo' height='32' width='32' /></div>
-                <div class="body"><p>{{ comment.content }}</p></div>
-            </li>
-			<!--子评论-->
-            {% for children_comment in comment.children_comment %}
-                <li id="comment-59542">
-                    <div class="reply">
-                        <div class="top"><a href="{{ children_comment.url }}" rel="external nofollow" class="url">{{ children_comment.username }}</a><span class="time"> @ <a href="#comment-59543" title="">{{ children_comment.date_publish | date:'Y-m-d H:i:s' }}</a></span></div>
-                        <div><img alt="" src="{% static 'images/default.jpg' %}" class="avatar avatar-32 photo" height="32" width="32"></div>
-                        <div class="body">
-                            {{ children_comment.content }}
-                        </div>
-                    </div>
-                </li>
             {% endfor %}
-            <!--子评论完-->
-        {% endfor %}
-        <!--主评论完-->
-        
-</ol>
+        </span>
+        <div class="info">
+        Address:  <a href="http://127.0.0.1:8000/article/?id={{ article.id }}" rel="bookmark" title="{{ article.title }}">{{ SITE_URL }}article/?id={{ article.id }}</a>
+        </div>
 
-<div id="commentform">
-    <h3 id="respond">评论区</h3>
+      <div class="commentstitle"><h3 id="comments"><span class="commentsnumber">only {{ article.comment_set.all.count }} comment</span> untill now</h3></div>
+
+      <ol class="commentlist">
+          {% for comment in comment_list %}
+          <li id="comment-59418">
+                <div class="top"><a href='{{ comment.user_info.userurl }}' rel='external nofollow' class='url'>{{ comment.user_info.username }}</a><span class="time"> @ <a href="#comment-59418" title="">{{ comment.date_publish | date:'Y-m-d H:i:s' }}</a></span></div>
+                <div><img alt='' src='{% static 'images/default.jpg' %}' class='avatar avatar-32 photo' height='32' width='32' /></div>
+                <div class="body">
+                    <p>{{ comment.content }}</p><br>
+                    <div><a href="#">回复</a>&nbsp;&nbsp;<a>点赞</a></div>
+                </div>
+          </li>
+
+          {% for children_comment in comment.children_comment %}
+          <li id="comment-59542">
+                <div class="reply">
+                  <div class="top"><a href="{{ children_comment.url }}" rel="external nofollow" class="url">{{ children_comment.username }}</a><span class="time"> @ <a href="#comment-59543" title="">{{ children_comment.date_publish | date:'Y-m-d H:i:s' }}</a></span></div>
+                  <div><img alt="" src="{% static 'images/default.jpg' %}" class="avatar avatar-32 photo" height="32" width="32"></div>
+
+                  <div class="body">
+                                        {{ children_comment.content }}                  </div>
+                </div>
+          </li>
+          {% endfor %}
+         {% endfor %}
+      </ol>
+
+    <div id="commentform">
+    <h3 id="respond">Add your comment now</h3>
     {% if not request.user.is_authenticated %}
-        <div class='login_info'>还没有登陆？可以登录后再评论哦。<b><a href="{% url 'blog:login' %}">&raquo;去登录</a>&nbsp;<a href="{% url 'blog:register' %}">&raquo;去注册</a></b></div>
-        {% else %}
-        <div class='login_info'><b>{{ request.user.username }}</b>,快来写点评论吧!&nbsp;<a href="{% url 'blog:logout' %}">注销</a></div>
-    {% endif %}
+    <div class='login_info'>还没有登陆？可以登录后再评论哦。<b><a href="{% url 'blog:login' %}">&raquo;去登录</a>&nbsp;<a href="{% url 'blog:register' %}">&raquo;去注册</a></b></div>
+    {% else %}
+    <div class='login_info'><b>{{ request.user.username }}</b>,快来写点评论吧!&nbsp;<a href="{% url 'blog:logout' %}">注销</a></div>
     <form action="{% url 'blog:receive' %}" method="post">
         <textarea placeholder="请写下你的想法..." style="width:592px;height:90px;" id="content" name="content"></textarea>
         <input type="text" name="aname" hidden value="{{ article.id }}" />
@@ -68,5 +67,6 @@
             <input name="submit" type="submit" id="submit" tabindex="5" value="提交评论" class="button" />
         </p>
     </form>
-</div>
+    {% endif %}
+    </div>
 {% endblock %}
