--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>博客首页</title>
+<title>谁的博客</title>
 <meta name="keywords" content=" " />
 <meta name="description" content=" " />
 <link href="{% static 'css/base.css' %}" rel="stylesheet">
@@ -18,139 +18,140 @@
 </head>
 <body>
 <header>
-    <div class="logo">
-        <h1>任昌伟的博客园</h1>
-        <p>好好沉淀，厚积薄发</p>
-    </div>
-    <nav id="topnav" class="f_r">
+  <div class="logo">
+      <h1>{{ request.user.username }}      个人博客</h1><h3><a href="{% url 'blog:publish' %}" style="color: deeppink">发表文章</a></h3>
+      <p>好好沉淀，厚积薄发</p>
+  </div>
+  <nav id="topnav" class="f_r">
     <ul>
-        <a href="/">首页</a>
-        {% for category in category_list %}
-        <a href="{% url 'blog:article' %}?cid={{ category.id }}">{{ category.name }}</a>
-        {% endfor %}
+      <a href="/">首页</a>
+      {% for category in category_list %}
+      <a href="{% url 'blog:index' %}?cid={{ category.id }}">{{ category.name }}</a>
+      {% endfor %}
     </ul>
     <script src="{% static 'js/nav.js' %}"></script>
-    </nav>
+  </nav>
 </header>
 <article>
-    <div class="l_box f_l">
-        {% block left_content %}{% endblock %}
+  <div class="l_box f_l">
+      {% block left_content %}{% endblock %}
+  </div>
+  <div class="r_box f_r">
+    <div class="tit01">
+      <h3>关注我</h3>
+      <div class="gzwm">
+        <ul>
+          <li><a class="xlwb" href="https://weibo.com/" target="_blank">新浪微博</a></li>
+          <li><a class="txwb" href="http://t.qq.com/" target="_blank">腾讯微博</a></li>
+          <li><a class="rss" href="http://rss.qq.com/news.htm" target="_blank">RSS</a></li>
+          <li><a class="wx" href="mailto:admin@admin.com">邮箱</a></li>
+        </ul>
+      </div>
     </div>
-    <div class="r_box f_r">
-        <div class="tit01">
-        <h3>关注我</h3>
-            <div class="gzwm">
-                <ul>
-                    <li><a class="xlwb" href="#" target="_blank">新浪微博</a></li>
-                    <li><a class="txwb" href="#" target="_blank">腾讯微博</a></li>
-                    <li><a class="rss" href="#" target="_blank">RSS</a></li>
-                    <li><a class="wx" href="mailto:admin@admin.com">邮箱</a></li>
-                </ul>
-            </div>
-        </div>
     <!--tit01 end-->
-        <div class="moreSelect" id="lp_right_select">
-            <script>
-                window.onload = function (){
-                    var oLi = document.getElementById("tab").getElementsByTagName("li");
-                    var oUl = document.getElementById("ms-main").getElementsByTagName("div");
-                    for(var i = 0; i < oLi.length; i++){
-                        oLi[i].index = i;
-                        oLi[i].onmouseover = function (){
-                            for(var n = 0; n < oLi.length; n++) oLi[n].className="";this.className = "cur";
-                            for(var n = 0; n < oUl.length; n++) oUl[n].style.display = "none";oUl[this.index].style.display = "block";
-                        }
-                    }
-                }
-            </script>
-            <div class="ms-top">
-                <ul class="hd" id="tab">
-                    <li class="cur"><a href="/">浏览排行</a></li>
-                    <li><a href="/">评论排行</a></li>
-                    <li><a href="/">站长推荐</a></li>
-                </ul>
-            </div>
-            <div class="ms-main" id="ms-main">
-                <div style="display: block;" class="bd bd-news" >
-                    <ul>
-                        <li><a href="/" target="_blank">住在手机里的朋友</a></li>
-                        <li><a href="/" target="_blank">教你怎样用欠费手机拨打电话</a></li>
-                        <li><a href="/" target="_blank">原来以为，一个人的勇敢是，删掉他的手机号码...</a></li>
-                        <li><a href="/" target="_blank">手机的16个惊人小秘密，据说99.999%的人都不知</a></li>
-                        <li><a href="/" target="_blank">你面对的是生活而不是手机</a></li>
-                        <li><a href="/" target="_blank">豪雅手机正式发布! 在法国全手工打造的奢侈品</a></li>
-                    </ul>
-                </div>
-                <div  class="bd bd-news">
-                    <ul>
-                        {% for article in article_comment_list %}
-                        <li><a href="/" target="_blank"> </a></li>
-                        {% endfor %}
-                    </ul>
-                </div>
-                <div class="bd bd-news">
-                    <ul>
-                        <li><a href="/" target="_blank">手机的16个惊人小秘密，据说99.999%的人都不知</a></li>
-                        <li><a href="/" target="_blank">你面对的是生活而不是手机</a></li>
-                        <li><a href="/" target="_blank">住在手机里的朋友</a></li>
-                        <li><a href="/" target="_blank">豪雅手机正式发布! 在法国全手工打造的奢侈品</a></li>
-                        <li><a href="/" target="_blank">教你怎样用欠费手机拨打电话</a></li>
-                        <li><a href="/" target="_blank">原来以为，一个人的勇敢是，删掉他的手机号码...</a></li>
-                    </ul>
-                </div>
-            </div>
-          <!--ms-main end -->
+    <div class="moreSelect" id="lp_right_select">
+      <script>
+window.onload = function ()
+{
+  var oLi = document.getElementById("tab").getElementsByTagName("li");
+  var oUl = document.getElementById("ms-main").getElementsByTagName("div");
+
+  for(var i = 0; i < oLi.length; i++)
+  {
+    oLi[i].index = i;
+    oLi[i].onmouseover = function ()
+    {
+      for(var n = 0; n < oLi.length; n++) oLi[n].className="";
+      this.className = "cur";
+      for(var n = 0; n < oUl.length; n++) oUl[n].style.display = "none";
+      oUl[this.index].style.display = "block"
+    }
+  }
+}
+</script>
+      <div class="ms-top">
+        <ul class="hd" id="tab">
+          <li class="cur"><a href="/">浏览排行</a></li>
+          <li><a href="/">评论排行</a></li>
+          <li><a href="/">站长推荐</a></li>
+        </ul>
+      </div>
+      <div class="ms-main" id="ms-main">
+        <div style="display: block;" class="bd bd-news" >
+          <ul>
+            <li><a href="/" target="_blank">住在手机里的朋友</a></li>
+            <li><a href="/" target="_blank">教你怎样用欠费手机拨打电话</a></li>
+            <li><a href="/" target="_blank">原来以为，一个人的勇敢是，删掉他的手机号码...</a></li>
+            <li><a href="/" target="_blank">手机的16个惊人小秘密，据说99.999%的人都不知</a></li>
+            <li><a href="/" target="_blank">你面对的是生活而不是手机</a></li>
+            <li><a href="/" target="_blank">豪雅手机正式发布! 在法国全手工打造的奢侈品</a></li>
+          </ul>
         </div>
-        <!--切换卡 moreSelect end -->
-        <div class="cloud">
-            <h3>标签云</h3>
-            <ul>
-            	{% for label in label_list %}
-                <li><a href="{% url 'blog:label' %}?lid={{ label.id }}">{{ label.name }}</a></li>
-                {% endfor %}
-                <li><a href="/">web开发</a></li>
-                <li><a href="/">前端设计</a></li>
-                <li><a href="/">Html</a></li>
-                <li><a href="/">CSS3</a></li>
-                <li><a href="/">Html5+css3</a></li>
-                <li><a href="/">百度</a></li>
-                <li><a href="/">Javasript</a></li>
-                <li><a href="/">web开发</a></li>
-                <li><a href="/">前端设计</a></li>
-                <li><a href="/">Html</a></li>
-                <li><a href="/">CSS3</a></li>
-                <li><a href="/">Html5+css3</a></li>
-                <li><a href="/">百度</a></li>
-                
-            </ul>
+        <div  class="bd bd-news">
+          <ul>
+            {% for article in article_comment_list %}
+            <li><a href="/" target="_blank"> </a></li>
+            {% endfor %}
+          </ul>
         </div>
-        <div class="tuwen">
-            <h3>文章归档</h3>
-            <ul>
-                {% for archive in archive_list %}
-                <li>
-                  <p><span class="tutime font-size-18"><a href='{% url 'archive' %}?year={{ archive | slice:":4" }}&month={{ archive | slice:"5:7" }}'>{{ archive }}</a></span></p>
-                </li>
-                {% endfor %}
-            </ul>
+        <div class="bd bd-news">
+          <ul>
+            <li><a href="/" target="_blank">手机的16个惊人小秘密，据说99.999%的人都不知</a></li>
+            <li><a href="/" target="_blank">你面对的是生活而不是手机</a></li>
+            <li><a href="/" target="_blank">住在手机里的朋友</a></li>
+            <li><a href="/" target="_blank">豪雅手机正式发布! 在法国全手工打造的奢侈品</a></li>
+            <li><a href="/" target="_blank">教你怎样用欠费手机拨打电话</a></li>
+            <li><a href="/" target="_blank">原来以为，一个人的勇敢是，删掉他的手机号码...</a></li>
+          </ul>
         </div>
-        <div class="links">
-            <h3>友情链接</h3>
-            <ul>
-                <li><a href="/">web开发</a></li>
-                <li><a href="/">前端设计</a></li>
-                <li><a href="/">Html</a></li>
-                <li><a href="/">CSS3</a></li>
-                <li><a href="/">Html5+css3</a></li>
-                <li><a href="/">百度</a></li>
-            </ul>
-        </div>
+      </div>
+      <!--ms-main end -->
     </div>
+    <!--切换卡 moreSelect end -->
+
+    <div class="cloud">
+      <h3>标签云</h3>
+      <ul>
+          {% for label in label_list %}
+              <li><a href="{% url 'blog:index' %}?lid={{ label.id }}">{{ label.name }}</a></li>
+          {% endfor %}
+        <li><a href="/">个人博客</a></li>
+        <li><a href="/">web开发</a></li>
+        <li><a href="/">前端设计</a></li>
+        <li><a href="/">Html</a></li>
+        <li><a href="/">CSS3</a></li>
+        <li><a href="/">Html5+css3</a></li>
+        <li><a href="/">百度</a></li>
+        <li><a href="/">Javasript</a></li>
+      </ul>
+    </div>
+    <div class="tuwen">
+      <h3>文章归档</h3>
+      <ul>
+        {% for archive in archive_list %}
+        <li>
+          <p><span class="tutime font-size-18"><a href='{% url 'archive' %}?year={{ archive | slice:":4" }}&month={{ archive | slice:"5:7" }}'>{{ archive }}</a></span></p>
+        </li>
+        {% endfor %}
+      </ul>
+    </div>
+    <div class="links">
+      <h3>友情链接</h3>
+      <ul>
+        <li><a href="/">web开发</a></li>
+        <li><a href="/">前端设计</a></li>
+        <li><a href="/">Html</a></li>
+        <li><a href="/">CSS3</a></li>
+        <li><a href="/">Html5+css3</a></li>
+        <li><a href="/">百度</a></li>
+      </ul>
+    </div>
+  </div>
   <!--r_box end -->
 </article>
 <footer>
-    <p class="ft-copyright">任昌伟的个人博客</p>
-    <div id="tbox"> <a id="togbook" href="/"></a> <a id="gotop" href="javascript:void(0)"></a> </div>
+  <p class="ft-copyright">任昌伟的个人博客</p>
+  <div id="tbox"> <a id="togbook" href="/"></a> <a id="gotop" href="javascript:void(0)"></a> </div>
 </footer>
 </body>
 </html>
