--- a/templates/blog/tags/sidebar.html
+++ b/templates/blog/tags/sidebar.html
@@ -102,9 +102,9 @@
     <aside id="text-2" class="widget widget_text"><h3 class="widget-title">欢迎您star或者fork本站源代码</h3>
         <div class="textwidget">
 
-            <p><a href="https://github.com/liangliangyy/DjangoBlog" rel="nofollow"><img
+            <p><a href="https://github.com/smallren101/DjangoBlog" rel="nofollow"><img
                     src="https://resource.lylinux.net/img.shields.io/github/stars/liangliangyy/djangoblog.svg?style=social&amp;label=Star"
-                    alt="GitHub stars"></a> <a href="https://github.com/liangliangyy/DjangoBlog" rel="nofollow"><img
+                    alt="GitHub stars"></a> <a href="https://github.com/smallren101/DjangoBlog" rel="nofollow"><img
                     src="https://resource.lylinux.net/img.shields.io/github/forks/liangliangyy/djangoblog.svg?style=social&amp;label=Fork"
                     alt="GitHub forks"></a></p>
         </div>
@@ -123,7 +123,7 @@
                 <li><a href="{% url "blog:refresh" %}" target="_blank">刷新缓存</a></li>
                 <li><a href="{% url 'owntracks:show_dates' %}" target="_blank">运动轨迹记录</a></li>
             {% endif %}
-            <li><a href="http://gitbook.lylinux.net" target="_blank" rel="nofollow">GitBook</a></li>
+            <li><a href="/" target="_blank" rel="nofollow">GitBook</a></li>
         </ul>
     </aside>
     <div id="rocket" class="show" title="点我返回顶部"></div>
