--- a/templates/share_layout/base.html
+++ b/templates/share_layout/base.html
@@ -3,10 +3,12 @@
 {% load compress %}
 <!DOCTYPE html>
 <!--[if IE 7]>
-<html class="ie ie7" lang="zh-CN" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
+<html class="ie ie7" lang="zh-CN"
+      prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
 <![endif]-->
 <!--[if IE 8]>
-<html class="ie ie8" lang="zh-CN" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
+<html class="ie ie8" lang="zh-CN"
+      prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
 <![endif]-->
 <!--[if !(IE 7) & !(IE 8)]><!-->
 <html lang="zh-CN" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
@@ -30,17 +32,21 @@
           href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700&#038;subset=latin,latin-ext'
           type='text/css' media='all'/>
     {% compress css %}
-        <link rel='stylesheet' id='twentytwelve-style-css' href='{% static 'blog/css/style.css' %}' type='text/css'
-              media='all'/>
-        <link href="{% static 'blog/css/oauth_style.css' %}" rel="stylesheet">
-        {% comment %}<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>{% endcomment %}
-        <!--[if lt IE 9]>
-        <link rel='stylesheet' id='twentytwelve-ie-css'  href='{% static 'blog/css/ie.css' %}' type='text/css' media='all' />
-        <![endif]-->
-        <link rel="stylesheet" href="{% static 'pygments/default.css' %}"/>
-        <link rel="stylesheet" href="{% static 'blog/css/nprogress.css' %}">
-        {% block compress_css %}
-        {% endblock %}
+    <link rel='stylesheet' id='twentytwelve-style-css' href='{% static ' blog
+    /css/style.css' %}' type='text/css'
+    media='all'/>
+    <link href="{% static 'blog/css/oauth_style.css' %}" rel="stylesheet">
+    {% comment %}
+    <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
+    {% endcomment %}
+    <!--[if lt IE 9]>
+    <link rel='stylesheet' id='twentytwelve-ie-css' href='{% static '
+          blog/css/ie.css' %}' type='text/css' media='all' />
+    <![endif]-->
+    <link rel="stylesheet" href="{% static 'pygments/default.css' %}"/>
+    <link rel="stylesheet" href="{% static 'blog/css/nprogress.css' %}">
+    {% block compress_css %}
+    {% endblock %}
     {% endcompress %}
 </head>
 
@@ -54,7 +60,7 @@
         </hgroup>
 
         {% cache 36000 nav %}
-            {% include 'share_layout/nav.html' %}
+        {% include 'share_layout/nav.html' %}
         {% endcache %}
 
     </header><!-- #masthead -->
@@ -64,8 +70,8 @@
         {% endblock %}
 
         {% cache 36000 sidebar request.user.username %}
-            {% block sidebar %}
-            {% endblock %}
+        {% block sidebar %}
+        {% endblock %}
         {% endcache %}
 
     </div><!-- #main .wrapper -->
@@ -75,12 +81,12 @@
 </body>
 <footer>
     {% compress js %}
-        <script type="text/javascript" src="{% static 'blog/js/jquery-3.1.1.js' %}"></script>
-        <script type="text/javascript" src="{% static 'blog/js/nprogress.js' %}"></script>
-        <script src="{% static 'blog/js/blog.js' %}" type="application/javascript"></script>
-        <script src="{% static 'blog/js/navigation.js' %}" type="application/javascript"></script>
-        {% block compress_js %}
-        {% endblock %}
+    <script type="text/javascript" src="{% static 'blog/js/jquery-3.1.1.js' %}"></script>
+    <script type="text/javascript" src="{% static 'blog/js/nprogress.js' %}"></script>
+    <script src="{% static 'blog/js/blog.js' %}" type="application/javascript"></script>
+    <script src="{% static 'blog/js/navigation.js' %}" type="application/javascript"></script>
+    {% block compress_js %}
+    {% endblock %}
     {% endcompress %}
     {% block footer %}
     {% endblock %}
