--- a/templates/share_layout/base.html
+++ b/templates/share_layout/base.html
@@ -32,7 +32,7 @@
           href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700&#038;subset=latin,latin-ext'
           type='text/css' media='all'/>
     {% compress css %}
-    <link rel='stylesheet' id='twentytwelve-style-css' href=“{% static 'blog/css/style.css' %}” type='text/css'
+    <link rel='stylesheet' id='twentytwelve-style-css' href="{% static 'blog/css/style.css' %}" type='text/css'
     media='all'/>
     <link href="{% static 'blog/css/oauth_style.css' %}" rel="stylesheet">
     {% comment %}
